Added transformer script to the Makefile.

--- a/paper/Makefile
+++ b/paper/Makefile
@@ -1,4 +1,4 @@
-all: linux_images train_networks make_tex copy_edps_files chapter_to_section introduction_gets_no_label compile_tex
+all: linux_images train_networks generate_tex copy_edps_files chapter_to_section introduction_gets_no_label compile_tex
 
 linux_images:
 	$(MAKE) linux -C src/tikz
@@ -6,9 +6,9 @@ linux_images:
 copy_edps_files:
 	cp src/assets/edpsmath.cls build/edpsmath.cls;
 	cp src/assets/edpsproc.clo build/edpsproc.clo;
-	sudo cp src/assets/documenter.sty build/documenter_custom.sty
+	cp src/assets/documenter.sty build/documenter_custom.sty
 
-make_tex:
+generate_tex:
 	julia --project --threads=8 make.jl no_pdf
 
 compile_tex: 
@@ -16,7 +16,8 @@ compile_tex:
 	xelatex -shell-escape V*.tex 
 
 train_networks:
-	julia --project --threads=8 src/volume_preserving_feed_forward.jl
+	julia --project --threads=8 src/volume_preserving_feed_forward.jl;
+	julia --project --threads=8 src/volume_preserving_transformer.jl
 
 chapter_to_section:
 	sed -i 's/\\chapter{/\\section{/g' build/V*.tex;
@@ -28,4 +29,3 @@ introduction_gets_no_label:
 clear: 
 	$(MAKE) empty -C src/tikz;
 	rm -r -f build;
-	rm -r -f _minted-*
