Now using acknowledgement environment provided with edpsmath document class.

--- a/paper/Makefile
+++ b/paper/Makefile
@@ -13,7 +13,7 @@ pdf_without_training_mac: mac_images pdf_without_training_and_images;
 	$(MAKE) compile_tex
 
 pdf_without_training_and_images: generate_tex;
-	$(MAKE) copy_edps_files chapter_to_section introduction_acknowledgements_get_no_label make_tex_references give_equations_labels do_correct_quotation_marks do_correct_footnotes do_correct_references_to_section do_correct_remarks
+	$(MAKE) copy_edps_files chapter_to_section introduction_gets_no_label use_acknowledgements_environment make_tex_references give_equations_labels do_correct_quotation_marks do_correct_footnotes do_correct_references_to_section do_correct_remarks
 
 linux_images:
 	$(MAKE) linux -C src/tikz
@@ -45,9 +45,12 @@ make_tex_references:
 	sed -i'' -e 's/m\[\([^ ]*\)\]m(@latex)/\\cref{\1}/g' build/V*.tex;
 	sed -i'' -e 's/M\[\([^ ]*\)\]m(@latex)/\\Cref{\1}/g' build/V*.tex
 
-introduction_acknowledgements_get_no_label:
-	sed -i'' -e 's/\\section{Introduction}/\\section*{Introduction}/g' build/V*.tex;
-	sed -i'' -e 's/\\section{Acknowledgements}/\\section*{Acknowledgements}/g' build/V*.tex
+introduction_gets_no_label:
+	sed -i'' -e 's/\\section{Introduction}/\\section*{Introduction}/g' build/V*.tex
+
+use_acknowledgements_environment:
+	sed -i'' -e 's/\\section{Acknowledgements}/\\begin{acknowledgement}/g' build/V*.tex;
+	sed -i'' -e 's/\\section{References}/\\end{acknowledgement}\\section{References}/g' build/V*.tex
 
 give_equations_labels:
 	sed -i'' -e 's/equation\*/equation/g' build/V*.tex;
