Section titles can't contain periods.

--- a/paper/Makefile
+++ b/paper/Makefile
@@ -59,7 +59,7 @@ do_correct_footnotes:
 	sed -i'' -e 's/\\footnotemark /\\footnotemark{} /g' build/V*.tex
 
 do_correct_references_to_section:
-	sed -i'' -e 's/\\hyperlinkref{\([0-9][0-9]*\)}{[^0-9][^0-9]*}/\\Cref{\1}/g' build/V*.tex
+	sed -i'' -e 's/\\hyperlinkref{\([0-9][0-9]*\)}{[^0-9][^0-9.]*}/\\Cref{\1}/g' build/V*.tex
 
 do_correct_remarks:
 	sed -i'' -e 's/REMARK::\(.*\)::/\\begin{rmrk}\1\\end{rmrk}/g' build/V*.tex;
