Proofread everything again.

--- a/paper/Makefile
+++ b/paper/Makefile
@@ -40,7 +40,7 @@ pdf_without_training_and_images: tex_without_training_and_images;
 	$(MAKE) compile_tex
 
 tex_without_training_and_images: generate_tex;
-	$(MAKE) copy_edps_files chapter_to_section introduction_gets_no_label use_acknowledgements_environment make_tex_references give_equations_labels do_correct_quotation_marks do_correct_footnotes do_correct_references_to_section do_correct_remarks
+	$(MAKE) copy_edps_files chapter_to_section introduction_gets_no_label use_acknowledgements_environment make_tex_references give_equations_labels do_correct_quotation_marks do_correct_footnotes do_correct_references_to_section do_correct_remarks reference_section
 
 tikz_images:
 	$(MAKE) linux -C src/tikz
@@ -68,6 +68,9 @@ chapter_to_section:
 	sed -i'' -e 's/\\section{/\\subsection{/g' build/V*.tex;
 	sed -i'' -e 's/\\chapter{/\\section{/g' build/V*.tex;
 	sed -i'' -e '/\\part{/d' build/V*.tex
+
+reference_section:
+	sed -i'' -e 's/\\section{References}/\\section*{References}/g' build/V*.tex
 
 make_tex_references:
 	sed -i'' -e 's/m\[\([^ ]*\)\]m(@latex)/\\cref{\1}/g' build/V*.tex;
